--- a/app/src/main/res/layout/activity_bottom_bar.xml
+++ b/app/src/main/res/layout/activity_bottom_bar.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_bottom_bar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.suleiman.material.activities.BottomBarActivity">
+    tools:context="com.ndroidpro.material.activities.BottomBarActivity">
 
     <FrameLayout
         android:id="@+id/frame_fragmentholder"
