--- a/app/src/main/res/layout/activity_toolbar_overlay.xml
+++ b/app/src/main/res/layout/activity_toolbar_overlay.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="@color/primary_500"
-    tools:context="com.suleiman.material.activities.ToolbarOverlayActivity">
+    tools:context="com.ndroidpro.material.activities.ToolbarOverlayActivity">
 
     <FrameLayout
         android:id="@+id/trans_bg"
