--- a/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_horizontal_margin"
-             tools:context="com.suleiman.material.activities.BottomBarFragment">
+             tools:context="com.ndroidpro.material.activities.BottomBarFragment">
 
     <TextView
         style="@style/Base.TextAppearance.AppCompat.Display1"
