--- a/app/src/main/res/menu/menu_header_toolbar.xml
+++ b/app/src/main/res/menu/menu_header_toolbar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.suleiman.material.activities.AnimateToolbar">
+      tools:context="com.ndroidpro.material.activities.AnimateToolbar">
 
     <item
         android:id="@+id/action_add"
