--- a/app/src/main/res/layout/my_profile.xml
+++ b/app/src/main/res/layout/my_profile.xml
@@ -20,9 +20,9 @@
             android:layout_height="@dimen/appbar_header_height"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:title="Nikhil Vashistha"
             app:expandedTitleMarginStart="@dimen/activity_margin_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:title="Nikhil Vashistha">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/anim_toolbar"
@@ -42,156 +42,13 @@
         android:paddingBottom="@dimen/activity_margin_content"
         android:paddingTop="@dimen/activity_margin_content"
         app:behavior_overlapTop="100dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v7.widget.LinearLayoutCompat
+        <FrameLayout
+            android:id="@+id/about"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"/>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/cardview_toolbar_spacer"
-                android:layout_marginLeft="@dimen/cardview_toolbar_spacer"
-                android:layout_marginRight="@dimen/cardview_toolbar_spacer"
-                android:layout_marginStart="@dimen/cardview_toolbar_spacer"
-                android:visibility="gone"
-                app:cardBackgroundColor="@android:color/white"
-                app:cardElevation="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:orientation="horizontal"
-                    android:paddingBottom="20dp">
-
-                    <android.support.v7.widget.AppCompatTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="&#xf0e1;"
-                        android:textColor="@color/red"
-                        android:textSize="30dp"
-                        app:fontFamily="@font/fontawesome_webfont"/>
-
-                    <android.support.v7.widget.AppCompatTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="&#xf082;"
-                        android:textColor="@color/red"
-                        android:textSize="30dp"
-                        app:fontFamily="@font/fontawesome_webfont"/>
-
-                    <android.support.v7.widget.AppCompatTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="&#xf099;"
-                        android:textColor="@color/red"
-                        android:textSize="30dp"
-                        app:fontFamily="@font/fontawesome_webfont"/>
-
-                    <android.support.v7.widget.AppCompatTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="&#xf09b;"
-                        android:textColor="@color/red"
-                        android:textSize="30dp"
-                        app:fontFamily="@font/fontawesome_webfont"/>
-
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/cardview_toolbar_spacer"
-                android:layout_marginLeft="@dimen/cardview_toolbar_spacer"
-                android:layout_marginRight="@dimen/cardview_toolbar_spacer"
-                android:layout_marginStart="@dimen/cardview_toolbar_spacer"
-                android:layout_marginTop="20dp"
-                android:visibility="gone"
-                app:cardBackgroundColor="@android:color/white"
-                app:cardElevation="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:orientation="vertical">
-
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone">
-
-                <android.support.v7.widget.AppCompatButton
-                    android:id="@+id/dark"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.33"
-                    android:text="@string/dark_theme"/>
-
-                <android.support.v7.widget.AppCompatButton
-                    android:id="@+id/light"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.33"
-                    android:text="@string/light_theme"/>
-
-                <android.support.v7.widget.AppCompatButton
-                    android:id="@+id/custom"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.33"
-                    android:text="@string/custom_theme"/>
-            </LinearLayout>
-
-            <FrameLayout
-                android:id="@+id/about"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </FrameLayout>
-
-        </android.support.v7.widget.LinearLayoutCompat>
     </android.support.v4.widget.NestedScrollView>
-
-    <FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/nested_parentframe"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:context="com.ndroidpro.material.activities.MyProfileActivity">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/nested_toolbar_1"
-            android:layout_width="match_parent"
-            android:layout_height="280dp"
-            android:background="?attr/colorPrimary"/>
-
-
-
-    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
