--- a/app/src/main/res/layout/xab_about_layout_card.xml
+++ b/app/src/main/res/layout/xab_about_layout_card.xml
@@ -55,8 +55,16 @@
                     android:id="@+id/brief"
                     style="@style/Brief"
                     android:layout_margin="5dp"
-                    android:ellipsize="end"
                     android:text="This is as short message saying who you are and what you like to do."/>
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/tv_read_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Read More..."
+                    android:layout_gravity="right"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="5dp"/>
 
                 <com.ndroidpro.material.about.views.AutoFitGridLayout
                     android:id="@+id/links"
